src/pages/app/dashboard/Dashboard.module.scss
.dashboard__container {
	padding: $space-lg;
	display: flex;
	flex-direction: column;
	gap: 1.5rem;
	justify-content: space-between;
}

.dashboard_charts__container {
	display: flex;
	flex-direction: column;
	gap: 1.5rem;
	width: 100%;

	@media (min-width: $breakpoint-lg) {
		flex-direction: row;
	}
}

.piechart{
	width: 100%;
	height: 300px;
	min-width: 200px;
	min-height: 200px;
}

